# albert-triplet

./: .gitignore  README.md  dataset.py  model.py  pyproject.toml  run.py
settings/: default.yaml
